# openapi.yml
@@ -67,7 +67,7 @@ components:
     FindByIdentifiersRequestBody:
       type: object
       properties:
-        IdPIdentifier:
+        idp-identifier:
           type: string
           example: "https://example.com/"
         identifiers:
@@ -78,18 +78,18 @@ components:
         fields:
           $ref: '#/components/schemas/Fields'
       required:
-        - IdPIdentifier
+        - idp-identifier
         - identifiers
     FindByPerunUserIdRequestBody:
       type: object
       properties:
-        userId:
+        user-id:
           type: integer
           example: 123456
         fields:
           $ref: '#/components/schemas/Fields'
       required:
-        - userId
+        - user-id
     CreateProxyUserRequestBody:
       type: object
       properties:
@@ -234,7 +234,7 @@ paths:
           $ref: '#/components/responses/500InternalError'
         '503':
           $ref: '#/components/responses/503TemporaryUnavailable'
-  /auth/proxy-user/{login}/identity/{identityId}:
+  /auth/proxy-user/{login}/identity/{identity-id}:
     put:
       summary: Update User-Identity attributes
       parameters:
@@ -244,7 +244,7 @@ paths:
           description: User's login
           schema:
             type: string
-        - name: identityId
+        - name: identity-id
           in: path
           required: true
           description: Identity unique identifier(in base64url saf)
@@ -276,7 +276,7 @@ paths:
     get:
       summary:  Find proxy user by given sourceIdP EntityId and addition source identifiers
       parameters:
-        - name: IdPIdentifier
+        - name: idp-identifier
           in: query
           description: IdP Identifier in base64url safe format
           required: true
@@ -354,7 +354,7 @@ paths:
     get:
       summary: Find proxy user by given sourceIdP EntityId and extLogins
       parameters:
-        - name: IdPIdentifier
+        - name: idp-identifier
           in: query
           description: IdP Identifier in base64url safe format
           required: true
@@ -432,7 +432,7 @@ paths:
     get:
       summary: Search user by given sourceIdP EntityId and source identifiers
       parameters:
-        - name: userId
+        - name: user-id
           in: query
           required: true
           description: User's perun ID
@@ -674,7 +674,7 @@ paths:
     get:
       summary: Get GA4GH passport for the given user.
       parameters:
-        - name: userId
+        - name: user-id
           in: query
           required: true
           description: User's perun ID
